# ElementalUI-Legacy

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: builder.yml
elemd/vcpkg/ports/elemd/: portfile.cmake
examples/calculator/: CMakeLists.txt
examples/calculator/src/: calculator.cpp  main.cpp  solver.cpp  solver.h
examples/elemx/: CMakeLists.txt
examples/elemx/src/: main.cpp
examples/parser/: CMakeLists.txt
examples/parser/src/: parser.cpp
examples/parsing/: CMakeLists.txt
examples/parsing/src/: parsing.cpp
examples/slack/: CMakeLists.txt
examples/slack/src/: main.cpp
examples/tasker/: CMakeLists.txt
examples/tasker/src/: main.cpp
include/elem/: document.h  element.h  elemental_ui.h  elemx_parser.h  heading.h  measure_value.h  node.h  text_field.h
scripts/: code_checker.py  package_linux.sh  package_mac.sh  package_win.bat
src/: document.cpp  element.cpp  elemx_parser.cpp  heading.cpp  main.cpp  measure_value.cpp  node.cpp  text_field.cpp
tools/: code_checker.py  generate_project_linux.sh  generate_project_mac.sh  generate_project_win.bat  install.py  package_mac.sh  setup.py
